@@ -18,12 +18,15 @@ S3method(hypothesis,brmsfit)
 S3method(launch_shiny,brmsfit)
 S3method(logLik,brmsfit)
 S3method(log_lik,brmsfit)
+S3method(log_posterior,brmsfit)
 S3method(loo,brmsfit)
 S3method(marginal_effects,brmsfit)
 S3method(marginal_smooths,brmsfit)
 S3method(model.frame,brmsfit)
+S3method(neff_ratio,brmsfit)
 S3method(ngrps,brmsfit)
 S3method(nobs,brmsfit)
+S3method(nuts_params,brmsfit)
 S3method(pairs,brmsfit)
 S3method(parnames,brmsfit)
 S3method(plot,brmsMarginalEffects)
@@ -53,6 +56,7 @@ S3method(prior_samples,brmsfit)
 S3method(prior_summary,brmsfit)
 S3method(ranef,brmsfit)
 S3method(residuals,brmsfit)
+S3method(rhat,brmsfit)
 S3method(stancode,brmsfit)
 S3method(standata,brmsfit)
 S3method(stanplot,brmsfit)
@@ -99,14 +103,17 @@ export(hurdle_poisson)
 export(hypothesis)
 export(launch_shiny)
 export(log_lik)
+export(log_posterior)
 export(lognormal)
 export(loo)
 export(make_stancode)
 export(make_standata)
 export(marginal_effects)
 export(marginal_smooths)
+export(neff_ratio)
 export(negbinomial)
 export(ngrps)
+export(nuts_params)
 export(parnames)
 export(posterior.samples)
 export(posterior_predict)
@@ -118,6 +125,7 @@ export(prior_samples)
 export(prior_string)
 export(prior_summary)
 export(ranef)
+export(rhat)
 export(set_prior)
 export(sratio)
 export(stancode)
@@ -137,7 +145,11 @@ import(methods)
 import(parallel)
 import(rstan)
 import(stats)
+importFrom(bayesplot,log_posterior)
+importFrom(bayesplot,neff_ratio)
+importFrom(bayesplot,nuts_params)
 importFrom(bayesplot,pp_check)
+importFrom(bayesplot,rhat)
 importFrom(coda,as.mcmc)
 importFrom(grDevices,devAskNewPage)
 importFrom(lme4,VarCorr)
