@@ -641,3 +641,40 @@ marginal_smooths <- function(x, ...) {
 expose_functions <- function(x, ...) {
   UseMethod("expose_functions")
 }
+
+#' Extract Diagnostic Quantities of \pkg{brms} Models
+#' 
+#' Extract quantities that can be used to diagnose sampling behavior
+#' of the algorithms applied by \pkg{Stan} at the back-end of \pkg{brms}.
+#' 
+#' @name diagnostic-quantities
+#' @aliases log_posterior nuts_params rhat neff_ratio
+#'     
+#' @param object A \code{brmsfit} object.
+#' @param pars An optional character vector of parameter names. 
+#'   For \code{nuts_params} these will be NUTS sampler parameter 
+#'   names rather than model parameters. If pars is omitted 
+#'   all parameters are included.
+#' @param ... Arguments passed to individual methods.
+#' 
+#' @return The exact form of the output depends on the method.
+#' 
+#' @details For more details see 
+#'   \code{\link[bayesplot:bayesplot-extractors]{bayesplot-extractors}}.
+#'   
+#' @examples 
+#' \dontrun{
+#' fit <- brm(time ~ age * sex, data = kidney)
+#' 
+#' lp <- log_posterior(fit)
+#' head(lp)
+#' 
+#' np <- nuts_params(fit)
+#' str(np)
+#' # extract the number of divergence transitions
+#' sum(subset(np, Parameter == "divergent__")$Value)
+#' 
+#' head(rhat(fit))
+#' head(neff_ratio(fit))
+#' }
+NULL
